feat: add beam-trace solver
- Added support for beam-trace solver in event handling, allowing for restoration of beam-trace states.
- Updated Markup component to accommodate increased buffer sizes for line and point rendering, optimizing for higher reflection orders.
- Implemented overflow tracking for lines and points in Markup, with warnings for buffer overflows.
- Introduced usage statistics retrieval for better monitoring of buffer utilization.
- Added TypeScript definitions for the beam-trace module, defining core types and classes for 3D functionality.
- Updated tsconfig to include new beam-trace type definitions.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -51,10 +51,11 @@
     "src/types/types.d.ts",
     "src",
     "src/.ts",
-    "types/bvh.d.ts", 
+    "types/bvh.d.ts",
     "types/three-mesh-bvh.d.ts",
     "types/global.d.ts",
-    "types/csg.d.ts"
+    "types/csg.d.ts",
+    "types/beam-trace.d.ts"
   ],
   "exclude": [
     "node_modules/**",
