--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@visx/shape": "^3.12.0",
     "@visx/zoom": "^3.12.0",
     "@zip.js/zip.js": "^2.2.23",
+    "beam-trace": "github:10log/BeamTrace2D",
     "chroma-js": "^3.2.0",
     "complex": "^3.0.1",
     "d3": "^7.9.0",
